@@ -1,4 +1,4 @@
-$Id: History,v 1.26 2001-02-03 18:29:25 johna Exp $
+$Id: History,v 1.27 2001-02-06 22:07:17 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,10 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+6th February 2001  John Allison  (greps-V03-00-01)
+- More tidying for CodeWizard.  Added virtual destructors to
+  HepPolyhedronBox, etc.  Also made all constructors non-inline.
 
 3rd February 2001  John Allison  (greps-V03-00-00)
 - Tidied for CodeWizard.  Note: G4Circle.icc and G4VVisPrim.icc removed, so
